VPA/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpa-test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpa-test-app
  template:
    metadata:
      labels:
        app: vpa-test-app
    spec:
      containers:
      - name: nginx
        image: nginx:stable-bookworm
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "2000m"
            memory: "2Gi"
