VPA/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpa-test-app
spec:
  selector:
    app: vpa-test-app
  ports:
  - port: 80
    name: http
    targetPort: 80
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
